# alfred

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  alfred-assist.py  alfred.py  focus.py  pyproject.toml  requirements.txt  setup.py  test-toolbar.py
assets/: alfred-assist.icns  alfred-focus-mode.shortcut  macos-focus-mode.shortcut
modules/: focus.py
slackbot/: alfred_slackbot.py
