[tool.poetry]
name = "alfred"
version = "0.1.0"
description = "Alfred Slack Bot"
authors = ["Tyler Knotek <tekkno89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
